--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 
 <body>
 
-<h1>This is a header</h1>
-<h2>This is a header</h2>
-<h3>This is a header</h3>
-<h4>This is a header</h4>
-<h5>This is a header</h5>
-<h6>This is a header</h6>
-    
+    <a href="https://www.google.com">Don't click this!</a>
+    <h1>This is a header</h1>
+    <h2>This is a header</h2>
+    <h3>This is a header</h3>
+    <h4>This is a header</h4>
+    <h5>This is a header</h5>
+    <h6>This is a header</h6>
 
-<h1>Lists</h1>    
-<h2>Unordered list</h2>
+
+    <h1>Lists</h1>    
+    <h2>Unordered list</h2>
     <ul>
         <li>This is a list of items</li>
         <li>This is a list of items</li>
