--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <li>This is a another list of items</li>
     </ol>
 
+    <p><strong>Lorem ipsum</strong> dolor sit amet, consectetur adipiscing elit. Cras vulputate est a ligula convallis finibus et non lectus. Pellentesque suscipit vitae nibh eget cursus. Sed aliquet sapien non ex pellentesque, nec fermentum diam rutrum. Aenean ullamcorper, est quis tincidunt varius, turpis ex aliquet nibh, vitae gravida tortor nulla vitae nisi. Vestibulum sagittis ac est at malesuada.</p>
+    
     <figure>
         <img src="img/pexels-photo-459225.jpeg"/>
         <figcaption> </figcaption>
